--- a/滑动窗口/3.无重复字符的最长子串.md
+++ b/滑动窗口/3.无重复字符的最长子串.md
@@ -4,11 +4,6 @@
 
 #### 暴力解
 
-时间复杂度
-$$
-O(n^{2})
-$$
-
 ```C
 /*
  * 定义了一个i(左边)和j(右边)，暴力从头开始扫,[定右边，扫左边是否有一样的]
@@ -49,5 +44,43 @@ int lengthOfLongestSubstring(char* s) {
 
 
 
+#### 滑动窗口
+
+```c
+/*
+ * 运用了滑动窗口的思想
+ * 因为要最长,满足则R向右拓展,不满足则L向右缩小
+ * 巧妙的利用了ascii码表(已有的字符在其中表1)来检测是否有重复
+*/
+int lengthOfLongestSubstring(char * s){
+    int left = 0, right = 0;
+    
+    int max_len = 0;
+    
+    // 计数器,当前ascii码表中有多少个1(即字符串长度)
+    int cnt = 0;
+    
+    int ascii_table[128] = {0};
+    
+    // 当R到s的末尾才会结束
+    while(right < strlen(s)){
+        // 判断R指针所指向的字符在表中是否有重复
+        if(ascii_table[ s[right] ] == 0){
+            ascii_table[ s[right] ] = 1;
+            right++;
+            cnt++;
+            if(cnt > max_len){
+                max_len = cnt;
+            }
+        }
+        else{
+            ascii_table[ s[left] ] = 0;
+            left++;
+            cnt--;
+        }
+    }
+    return max_len;
+}
+```
 
 
